welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:6: error: reassignment to val
  if (a= b && b=c){
       ^